league 1/competition-simulator-sr2021-kickstart/zone-1/log-zone-1-2021-01-16T00_53_13.477309.txt
1| Using C:\Users\User\Documents\A LEVEL COMPUTER SCIENCE\Student Robotics\competition-simulator-sr2021-kickstart\zone-1\robot.py for Zone 1
1| Traceback (most recent call last):
1|   File "sr_controller.py", line 254, in <module>
1|   File "sr_controller.py", line 250, in main
1|   File "<string>", line 127
1|     startTurning = False
1|                        ^
1| IndentationError: unindent does not match any outer indentation level
